# NarrativeForge

./: .gitignore  BUILD_GUIDE.md  LICENSE  README.md  app.py  build.sh  build_windows.bat  fixes_summary.md  functionality_report.md  main.py  requirements.txt  sample_canon.txt  setup_and_run.py  开发.txt
config/: analyzer_schema.json  generator_schema.json
core/: analyzer.py  api_router.py  database.py  domain_adapter.py  generator.py
cpp/: CMakeLists.txt  README.md
cpp/include/narrativeforge/: api_key_manager.hpp  api_router.hpp  app_controller.hpp  core.hpp  module_interface.hpp  unified_controller.hpp
cpp/src/: main.cpp  main_cli.cpp  main_unified.cpp
cpp/src/core/: analyzer.cpp  api_key_manager.cpp  api_key_manager_singleton.cpp  api_router.cpp  app_controller.cpp  generator.cpp  unified_controller.cpp
docs/: BUILD_ISSUES_REPORT.md  BUILD_SUCCESS_REPORT.md  BUILD_SUMMARY.md  COMPILER_INSTALL_GUIDE.md  COMPILE_GUIDE.md  CURRENT_BUILD_STATUS.md  DOCUMENT_ORGANIZATION_SUMMARY.md  ENVIRONMENT_CONFIG_STATUS.md  ENVIRONMENT_SETUP_GUIDE.md  FINAL_BUILD_REPORT.md  QUICK_SETUP.md
scripts/: build_simple.bat  build_with_portable_cmake.bat  check_env.ps1
templates/: index.html
tools/cmake-3.19.4-win64-x64/doc/cmake/html/release/: 3.0.html  3.1.html  3.10.html  3.11.html  3.12.html  3.13.html  3.14.html  3.15.html  3.16.html  3.17.html  3.18.html  3.19.html  3.2.html  3.3.html  3.4.html  3.5.html  3.6.html  3.7.html  3.8.html  3.9.html  index.html
ui/: main_window.py
